@startuml ModelComponentCD
title Model Component - Class Diagram

class InternshipList {
  - {static} List: ArrayList<Internship>
  - {static} storage: Storage
  - {static} username: String
  + {static} setStorage(Storage): void
  + {static} loadFromStorage(): void
  + {static} saveToStorage(): void
  + {static} size(): int
  + {static} sortInternships(orderType): void
  + {static} listAll(orderType): void
  + {static} findInternship(String): void
  + {static} clear(): void
  - {static} isEmpty(): boolean
}

interface Comparable<T> {
    + compareTo(T): int
}

class Internship {
  - company: String
  - role: String
  - deadline: Date
  - status: String
  - pay: int
  + Internship(String, String, Date, int)
  + {static} isValidStatus(String): boolean
  + compareTo(Internship): int
  + toString(): String
}

class Date {
  - day: int
  - month: int
  - year: int
  + Date(int, int, int)
  + compareTo(Date): int
  + toString(): String
}

enum Status {
  PENDING
  INTERESTED
  APPLIED
  INTERVIEWING
  OFFER
  ACCEPTED
  REJECTED
  + {static} isValid(String): boolean
  + {static} canonical(String): String
}

InternshipList *-left- "*" Internship
Internship .|> Comparable
Date .left.|> Comparable
Internship --> "1" Date : deadline
Internship --> "1" Status : status

@enduml
